Fixed typo in config search term

--- a/internal_files/config.ini
+++ b/internal_files/config.ini
@@ -45,7 +45,7 @@ Elite_HRV = elite hrv
 Fitbit_Charge = fitbit charge
 Fitbit_Sense = fitbit((?!charge).)*$
 Garmin_Fenix = garmin
-Google_Fit = google( )?fit
+Google_Fit = google[ -]?fit
 Hypnodyne_ZMax = hypnodyne
 IPhone = i[ -]?phone
 MyFitnessPal = my ?fitness ?pal
